# testing-observability-platform-fastapi

./: .coverage  .dockerignore  .env  .env.backup  .env.docker  .env.example  .gitignore  API_CONFIGURATION.md  CLAUDE.md  DATABASE_SETUP.md  Dockerfile  EVALUATOR_INTEGRATION_SPEC.md  Makefile  PROJECT_INFO.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.k8s.yml  docker-compose.yml  init_db.py  pyproject.toml  simple_test.csv  test.db  test_conversation_parser.py  test_data.csv  test_dataset.csv  test_experiment.csv  test_experiment_results.csv  test_frontend_integration.py  test_input_data.csv  test_observability.py  test_scan.json
.github/workflows/: claude.yml
alembic/: env.py
alembic/versions/: 20250908_1134-fa29f95bb5da_initial_database_schema.py  20250909_add_task_id_to_evaluations.py  20250918_1151-add_vulnerability_scan.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: datasets.py  datasets.py.bak  evaluation_analysis.py  evaluations.py  evaluators.py  experiments.py  experiments.py.bak  guardrails.py  health.py  items.py  users.py  vulnerability_scanner.py  websockets.py
app/core/: audit_events.py  config.py  database.py  dependencies.py  logging.py  metrics.py  observability_logging.py  observability_tracing.py  websocket_manager.py
app/db/: session.py
app/middleware/: audit.py  rate_limit.py  security.py
app/models/: __init__.py  base.py  dataset.py  evaluation.py  experiment.py  vulnerability_scan.py
app/schemas/: __init__.py  dataset.py  experiment.py
app/services/: dataset_service.py  deepteam_service.py  evaluation_service.py  experiment_service.py  queue_service.py
app/utils/: cache.py  csv_parser.py  monitoring.py
app/workers/: __init__.py  celery_app.py
app/workers/tasks/: __init__.py  evaluation_tasks.py  experiment_runner_tasks.py  vulnerability_scan_tasks.py
docker/: Dockerfile.dev  Dockerfile.prod
docs/: OPTIMAL_FASTAPI_TEMPLATE.md  asyncpg_gotchas_guide.md  bare_minimum_alembic_guide.md  bare_minimum_uv_guide.md  pydantic_settings_guide.md  tier-progression.md  tiered-fastapi-hipaa-architecture.md  uv_intro.md
helm/: Chart.yaml  values-local.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-evaluator.yaml  deployment-worker.yaml  external-secret.yaml  hpa.yaml  migration-job.yaml  pdb.yaml  service-api.yaml  service-evaluator.yaml  serviceaccount.yaml
samples/: cardiology_scribe_dataset.csv  experiment_template.csv  healthcare_appointment_dataset.csv  healthcare_multi_conversation_dataset.csv  kelly_cardiology_experiment.csv  kelly_test.csv  results.csv  results_multi.csv  results_multi_formatted.csv  test_conversation_format.csv
scripts/: init_db.py  setup.py  start.sh  stop.sh  test_db.py
tests/: conftest.py
tests/unit/: test_csv_edge_cases.py  test_csv_error_messages.py  test_csv_parser.py  test_dataset_schemas.py  test_experiment_csv_import.py  test_intelligent_column_mapping.py  test_main.py
